--- a/letter.html
+++ b/letter.html
@@ -70,7 +70,7 @@ button {
   margin-top: 14px;
 }
 .card {
-  background: white;
+  background: #7f00ff;
   border-radius: 20px;
   padding: 22px;
   text-align: center;
